--- a/html/style.css
+++ b/html/style.css
@@ -1,17 +1,1 @@
-
-body {
-	background-color: #404040;
-	font-family: sans-serif;
-}
-
-#main {
-	background-color: #d0d0FF;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	border: 2px solid #000000;
-	width: 800px;
-	margin: 0 auto;
-	padding: 20px
-}
-
+html,body{background:#48505f;color:#eee;font-family:monospace;font-size:16pt;text-align:center}header{font-weight:bold;font-size:14pt;padding:6px;display:block}#screen{display:block;white-space:nowrap;background:#111213;border-radius:3px;padding:6px;box-shadow:inset 0 0 5px black;display:inline-block}#screen span{white-space:pre}#buttons{margin-top:10px}button{margin:0 2px;padding:10px 0;width:22%;max-width:80px;cursor:pointer}
