--- a/html_orig/sass/_layout.scss
+++ b/html_orig/sass/_layout.scss
@@ -42,6 +42,10 @@ a:hover {
 	//	margin-top: 0;
 	//}
 
+	p:first-child {
+		margin-top:0;
+	}
+
 	border-radius: 3px;
 	background-color: rgba(white, .07);
 
@@ -91,10 +95,11 @@ body {
 		}
 	}
 
-	//h2 {
-	//	font-size: fsize(3);
-	//	margin-bottom: dist(-1);
-	//}
+	h2 {
+		font-size: fsize(2);
+		margin-bottom: dist(-1);
+		&:first-child{margin-top:0}
+	}
 
 	td, th {
 		padding: dist(-2);
