--- a/html_orig/sass/form/_index.scss
+++ b/html_orig/sass/form/_index.scss
@@ -1,5 +1,13 @@
 @import 'fancy_button_mixins';
 @import 'buttons';
 @import 'form_elements';
+
+%form-row-spacing {
+	& > * {
+		margin-right: dist(-2);
+		&:last-child { margin-right: 0 }
+	}
+}
+
 //@import 'form_layout';
 //@import 'select';
