--- a/html_orig/css/app.css
+++ b/html_orig/css/app.css
@@ -461,8 +461,6 @@ h1 {
 h2 {
   font-size: 1.26563em;
   margin-bottom: 0.61805rem; }
-  h2:first-child {
-    margin-top: 0; }
 
 td, th {
   padding: 0.38198rem;
@@ -497,6 +495,21 @@ tbody td input[type="text"], tbody td input[type="number"] {
       right: 1rem; } }
   #loader.show {
     opacity: 1; }
+
+ul > * {
+  padding-top: .1em;
+  padding-bottom: .1em; }
+
+#botnav {
+  padding-top: 1.5em;
+  text-align: center; }
+  #botnav a {
+    padding: 0 0.38198rem;
+    text-decoration: underline; }
+    #botnav a, #botnav a:visited, #botnav a:link {
+      color: #2e4d6e; }
+    #botnav a:hover {
+      color: #5abfff; }
 
 button, input[type=submit], .button {
   text-align: center;
@@ -687,6 +700,8 @@ input[type="number"], input[type="password"], input[type="text"], textarea, sele
       @media screen and (max-width: 544px) {
         .page-term #screen span:hover {
           outline: 0 none; } }
+  .page-term #screen .fg8, .page-term #screen .fg9, .page-term #screen .fg10, .page-term #screen .fg11, .page-term #screen .fg12, .page-term #screen .fg13, .page-term #screen .fg14, .page-term #screen .fg15 {
+    font-weight: bold; }
 .page-term #buttons {
   margin-top: 10px;
   white-space: nowrap; }
@@ -701,3 +716,149 @@ input[type="number"], input[type="password"], input[type="text"], textarea, sele
 
 #termwrap {
   text-align: center; }
+
+.page-about .Box {
+  padding-left: 1rem;
+  padding-right: 1rem; }
+  .page-about .Box a {
+    font-weight: bold; }
+.page-about #logo {
+  float: right;
+  height: 130px; }
+.page-about #logo2 {
+  max-width: 100%; }
+.page-about td {
+  white-space: normal; }
+
+.colorprev {
+  margin-top: 0.38198rem;
+  margin-bottom: 0.38198rem; }
+  .colorprev span {
+    display: inline-block;
+    width: 2em;
+    padding: 0.38198rem 0;
+    text-align: center; }
+
+.ansiref, .ansiref td, .ansiref th {
+  border: 1px solid #666; }
+.ansiref th, .ansiref td {
+  white-space: normal; }
+.ansiref th {
+  background-color: rgba(255, 255, 255, 0.1); }
+.ansiref td:nth-child(1) {
+  font-family: monospace; }
+.ansiref.w100 {
+  width: 100%; }
+  .ansiref.w100 td:nth-child(1) {
+    width: 6em; }
+  .ansiref.w100 td:nth-child(2) {
+    width: 8em; }
+
+.fg0 {
+  color: #111213; }
+
+.bg0 {
+  background-color: #111213; }
+
+.fg1 {
+  color: #CC0000; }
+
+.bg1 {
+  background-color: #CC0000; }
+
+.fg2 {
+  color: #4E9A06; }
+
+.bg2 {
+  background-color: #4E9A06; }
+
+.fg3 {
+  color: #C4A000; }
+
+.bg3 {
+  background-color: #C4A000; }
+
+.fg4 {
+  color: #3465A4; }
+
+.bg4 {
+  background-color: #3465A4; }
+
+.fg5 {
+  color: #75507B; }
+
+.bg5 {
+  background-color: #75507B; }
+
+.fg6 {
+  color: #06989A; }
+
+.bg6 {
+  background-color: #06989A; }
+
+.fg7 {
+  color: #D3D7CF; }
+
+.bg7 {
+  background-color: #D3D7CF; }
+
+.fg8 {
+  color: #555753; }
+
+.bg8 {
+  background-color: #555753; }
+
+.fg9 {
+  color: #EF2929; }
+
+.bg9 {
+  background-color: #EF2929; }
+
+.fg10 {
+  color: #8AE234; }
+
+.bg10 {
+  background-color: #8AE234; }
+
+.fg11 {
+  color: #FCE94F; }
+
+.bg11 {
+  background-color: #FCE94F; }
+
+.fg12 {
+  color: #729FCF; }
+
+.bg12 {
+  background-color: #729FCF; }
+
+.fg13 {
+  color: #AD7FA8; }
+
+.bg13 {
+  background-color: #AD7FA8; }
+
+.fg14 {
+  color: #34E2E2; }
+
+.bg14 {
+  background-color: #34E2E2; }
+
+.fg15 {
+  color: #EEEEEC; }
+
+.bg15 {
+  background-color: #EEEEEC; }
+
+@media screen and (min-width: 545px) {
+  .mq-phone {
+    display: none; } }
+@media screen and (max-width: 544px) {
+  .mq-tablet-min {
+    display: none; } }
+@media screen and (min-width: 1001px) {
+  .mq-tablet-max {
+    display: none; } }
+@media screen and (max-width: 1000px) {
+  .mq-normal-min {
+    display: none; } }
